RabbitMQ所有模式测试

--- a/rabbitmq_consumer/src/main/resources/application-test1.yml
+++ b/rabbitmq_consumer/src/main/resources/application-test1.yml
@@ -1,9 +1,10 @@
 
 server:
-  port: 9012
+  port: 9021
 spring:
+  profiles:
   application:
-    name: rabbitmq-production
+    name: rabbitmq-consumer-test1
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/qqq?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
