--- a/producer/src/main/resources/application.yml
+++ b/producer/src/main/resources/application.yml
@@ -1,6 +1,9 @@
+server:
+  port: 9000
+
 spring:
   application:
-    name: activemq
+    name: active-producer
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://47.115.55.168:3306/qqqcode?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
@@ -22,3 +25,7 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+mqcofig:
+  asyqueue: QqqAsyQueue
