--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -21,6 +21,8 @@ spring:
       idle-timeout: 30s # 空闲连接超时时间
       max-connections: 50 # 连接池中最大连接数
       max-sessions-per-connection: 100 # 每个连接最大会话
+#  jms:
+#    pub-sub-domain: false
 
 mybatis-plus:
   configuration:
